--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </p>
     </div> 
     <div id="menu">
-        <p><a href="raider-abysal-ps.html">Raider - Power Siphon Abyssal Jewel stacking </a></p> <br>
-        <p><a href="deadeye-fullunique-ps.html">Deadeye - Power Siphon full unique fastaf </a></p>
+        <p><a href="raider-abysal-ps.html">(3.15) Raider - Power Siphon Abyssal Jewel stacking </a></p> <br>
+        <p><a href="deadeye-fullunique-ps.html">(3.15) Deadeye - Power Siphon full unique fastaf </a></p>
     </div>
     <div id="footer">
         <p class="stopaabsolutna">
